# built

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/: dependabot.yml
.github/workflows/: check.yml
built-at-build/: Cargo.toml  build.rs
built-at-build/src/: lib.rs
example_project/: Cargo.toml  build.rs
example_project/src/: main.rs
semver_check/: Cargo.toml
semver_check/src/: lib.rs
src/: dependencies.rs  environment.rs  git.rs  git_impl.rs  git_shared.rs  gix.rs  gix_impl.rs  krono.rs  lib.rs  util.rs
testbox/: Cargo.toml  build.rs
testbox/src/: lib.rs
tests/: testbox_tests.rs  util_tests.rs
