[package]
name = "example_project"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
built = { version = "0.6", path="../", features = ["chrono", "semver"] }

[build-dependencies]
built = { version = "0.6", path="../", features = ["cargo-lock", "git2", "chrono", "semver"] }
