[package]
name = "example_project"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
build = "build.rs"
edition = "2021"
publish = false
rust-version = "1.85"

[dependencies]
built = { version = "0.8", path = "../", features = ["chrono", "semver"] }

[build-dependencies]
built = { version = "0.8", path = "../", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }
